added momento pattern , abstract factory